# ijkplayer

./: CMakeLists.txt  init-android-soundtouch.sh
ijkmedia/: CMakeLists.txt
ijkmedia/ijkj4a/: CMakeLists.txt
ijkmedia/ijkplayer/: CMakeLists.txt
ijkmedia/ijksdl/: CMakeLists.txt
ijkprof/android-ndk-profiler-dummy/jni/: CMakeLists.txt
pc/: build_the_sample_config_for_x86_64.sh
